--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <activity android:name=".ParseXML"/> <activity android:name=".ParseJSON"/>
+        </activity>
     </application>
 
 </manifest>
